SSM dashboard card issue fix  - dark mode

--- a/08072020/scss/dark-mode.scss
+++ b/08072020/scss/dark-mode.scss
@@ -3024,7 +3024,7 @@ ul.sapUshellInner {
                                 }
                             }
                             @media (min-width: 768px){
-                                height: 560px;
+                                height: 450px;
                             }
                         }
                     }
@@ -3271,7 +3271,7 @@ ul.sapUshellInner {
                                 }
                             }
                             @media (min-width: 768px){
-                                height: 560px;
+                                height: 600px;
                             }
                         }
                     }
